--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:2.0.19-1ubuntu1ppa1~bionic) bionic; urgency=medium
+
+  * New upstream version 2.0.19
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Tue, 29 Oct 2019 10:27:06 +0900
+
 keepalived (1:2.0.13-1ubuntu1ppa1~18.04.1) bionic; urgency=medium
 
   * Fix cofigure option, escape $ in Makefile
