--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:2.1.3-1ubuntu1ppa1~focal) focal; urgency=medium
+
+  * New upstream version 2.1.3
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Wed, 08 Jul 2020 04:00:28 +0900
+
 keepalived (1:2.0.20-1ubuntu1ppa2~focal) focal; urgency=medium
 
   * Port to Ubuntu 20.04 LTS. 
