--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+keepalived (1:2.1.3-1ubuntu1ppa1~bionic) bionic; urgency=medium
+
+  * Add debian/gbp.conf to set debian-branch to ubuntu/bionic
+  * New upstream version 2.1.3
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Wed, 08 Jul 2020 04:07:05 +0900
+
 keepalived (1:2.0.20-1ubuntu1ppa2~bionic) bionic; urgency=medium
 
   * Add libnftnl-dev to Build-Depends
